@@ -1,6 +1,8 @@
 Roundcube Webmail ContextMenu
 =============================
 
+ * Fix #67 address book copy/move action not updated
+
 Version 2.1.1 (2015-03-18, rc-1.1)
 =================================================
  * Update submenu detection after 619891c
